top nav links activated

--- a/index.html
+++ b/index.html
@@ -48,35 +48,194 @@
 
         <div class="main-content" id="mainContent">
             <section id="home">
-                <h2>Home</h2>
-                <p>Content for Home section.</p>
+                <div class="hero">
+                    <div class="hero-header">
+                        <span>Welcome to ElimuNet: Empowering Minds, Inspiring
+                            Futures</span>
+                    </div>
+                    <div class="hero-text">
+                        <h2>This is the Future of Learning</h2>
+                        <p>At ElimuNet, we believe in the transformative power
+                            of education. Whether you're a student, educator, or
+                            lifelong learner, you'll find a wealth of resources,
+                            insights, and inspiration to help you succeed.
+                            Together, let's bridge gaps, embrace innovation, and
+                            build a collaborative learning community where
+                            knowledge knows no boundaries..</p>
+                        <p>Join thousands of learners worldwide and achieve your
+                            educational goals with us.</p>
+                        <p>Start your journey today!</p>
+                    </div>
+                    <div class="hero-photo">
+                        <img src="./Assets/heroPhoto.png"
+                            alt="Education Image">
+                    </div>
+                    <div class="hero-buttons">
+                        <button class="get-started">Get Started</button>
+                        <button class="explore-more">Explore More</button>
+                    </div>
+                </div>
             </section>
+
             <section id="about">
-                <h2>About</h2>
-                <p>Content for About section.</p>
+                <div class="header">
+                    <h1>About Us</h1>
+                </div>
+                <div class="container">
+                    <div class="section">
+                        <h2>Welcome to ElimuNet</h2>
+                        <p>Your trusted source for insightful and engaging
+                            educational content. At ElimuNet, we are passionate
+                            about fostering a love for learning, empowering
+                            educators, and providing valuable resources to
+                            students, parents, and lifelong learners alike.</p>
+                    </div>
+                    <div class="section">
+                        <h2>Our Mission</h2>
+                        <p>Empowering minds and inspiring futures through
+                            quality education. We believe education is the key
+                            to personal and societal growth. Our blog serves as
+                            a platform to share knowledge, explore innovative
+                            teaching methodologies, and foster
+                            collaboration.</p>
+                    </div>
+                    <div class="section">
+                        <h2>Our Vision</h2>
+                        <p>We envision an inclusive educational landscape where
+                            quality resources are accessible to all. By
+                            leveraging technology and fostering lifelong
+                            learning, we aim to create a transformative and
+                            collaborative educational experience for
+                            everyone.</p>
+                    </div>
+                </div>
             </section>
+
             <section id="contact">
-                <h2>Contact</h2>
-                <p>Content for Contact section.</p>
+                <div class="contact-container">
+                    <div class="contact-form">
+                        <h2>Contact Us</h2>
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" required>
+
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email"
+                                required>
+
+                            <label for="comment">Comment:</label>
+                            <textarea id="comment" name="comment" rows="4"
+                                required></textarea>
+
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                    <div class="contact-info">
+                        <h2>Get in Touch</h2>
+                        <p>Email: your-email@example.com</p>
+                        <p>Phone: +123 456 7890</p>
+                        <div class="social-media">
+                            <a href="https://facebook.com" target="_blank"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com" target="_blank"><i
+                                    class="fab fa-twitter"></i></a>
+                            <a href="https://linkedin.com" target="_blank"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a href="https://instagram.com" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
             </section>
+
             <section id="team">
-                <h2>Our Team</h2>
-                <p>Content for Our Team section.</p>
+                <div class="team-container">
+                    <h2>Our Team</h2>
+                    <div class="team-cards">
+                        <div class="team-card">
+                            <img src="./Assets/Emmanuel.png"
+                                alt="Team Member 1">
+                            <h3>Emmanuel Kapyela</h3>
+                            <p>Project Owner</p>
+                            <p>Emmanuel is the rightful owner of the idea of
+                                ElimuNet project.</p>
+                        </div>
+                        <div class="team-card">
+                            <img src="./Assets/Eliah.png" alt="Team Member 2">
+                            <h3>Eliah Kapyela</h3>
+                            <p>Lead Developer</p>
+                            <p>Eliah is responsible for the development and
+                                implementation of the project.</p>
+                        </div>
+                        <div class="team-card">
+                            <img src="./Assets/Eliah.png" alt="Team Member 3">
+                            <h3>Eliah Kapyela</h3>
+                            <p>UI/UX Designer</p>
+                            <p>Eliah designs the user interface and ensures a
+                                great user experience.</p>
+                        </div>
+                        <div class="team-card">
+                            <img src="./Assets/Godlove.png" alt="Team Member 4">
+                            <h3>Godlove Kapyela</h3>
+                            <p>Project Manager</p>
+                            <p>Godlove oversees the project and ensures that all
+                                milestones are met on time.</p>
+                        </div>
+                    </div>
+                </div>
             </section>
+
             <section id="faqs">
-                <h2>FAQs</h2>
-                <p>Content for FAQs section.</p>
+                <div class="faqs-container">
+                    <h2>Frequently Asked Questions</h2>
+                    <div class="faq">
+                        <h3>What is ElimuNet?</h3>
+                        <p>ElimuNet is an educational platform that provides
+                            insightful and engaging content to foster a love for
+                            learning. We offer resources for students, parents,
+                            and educators to enhance their educational
+                            experience.</p>
+                    </div>
+                    <div class="faq">
+                        <h3>How can I join ElimuNet?</h3>
+                        <p>You can join ElimuNet by signing up on our website.
+                            Simply click on the "Login/Register" link in the top
+                            navigation and follow the instructions to create an
+                            account.</p>
+                    </div>
+                    <div class="faq">
+                        <h3>What resources are available on ElimuNet?</h3>
+                        <p>ElimuNet offers a variety of resources including
+                            syllabi, lesson plans, study notes, books, and past
+                            papers. Our goal is to provide comprehensive
+                            materials to support your educational journey.</p>
+                    </div>
+                    <div class="faq">
+                        <h3>Is ElimuNet free to use?</h3>
+                        <p>Yes, ElimuNet offers a range of free resources.
+                            However, we also provide premium content and
+                            services that require a subscription. You can
+                            explore our offerings and choose the plan that best
+                            suits your needs.</p>
+                    </div>
+                    <div class="faq">
+                        <h3>How can I contact ElimuNet for support?</h3>
+                        <p>If you need assistance, you can contact us through
+                            the "Contact Us" section on our website. We are here
+                            to help and support you with any questions or
+                            concerns you may have.</p>
+                    </div>
+                </div>
             </section>
-            
+
+        </div>
+
         <footer id="footer">
             <p>&copy; 2023 ElimuNet. All rights reserved.</p>
         </footer>
 
-        </div>
-
-        
-
         <script src="./JavaScripts/nav_script.js"></script>
+        <script src="./JavaScripts/main_scripts.js"></script>
     </body>
 
 </html>
