--- a/sign_in.html
+++ b/sign_in.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - ElimuNet</title>
-    <link rel="stylesheet" href="./CSS/SignUpStyle.css">
+    <title>Sign In - ElimuNet</title>
+    <link rel="stylesheet" href="./CSS/SignInStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <div class="signup-container">
-        <h1>Sign Up</h1>
-        <form id="signupForm">
-            <div class="form-group">
-                <label for="fullName">Full Name:</label>
-                <input type="text" id="fullName" name="fullName" required>
-            </div>
+    <div class="signin-container">
+        <h1>Sign In</h1>
+        <form id="signinForm">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
@@ -29,18 +25,18 @@
                     Remember Me
                 </label>
             </div>
-            <button type="submit">Sign Up</button>
-            <p>Or sign up with:</p>
-            <div class="social-signup">
+            <button type="submit">Sign In</button>
+            <p>Or sign in with:</p>
+            <div class="social-signin">
                 <a href="#" class="social-btn google"><i class="fab fa-google"></i></a>
                 <a href="#" class="social-btn facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="social-btn twitter"><i class="fab fa-twitter"></i></a>
                 <a href="#" class="social-btn instagram"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>Already have an account? <a href="sign_in.html">Sign In</a></p>
+            <p>Don't have an account? <a href="sign_up.html">Sign Up</a></p>
         </form>
     </div>
 
-    <script src="./JavaScripts/signup_script.js"></script>
+    <script src="./JavaScripts/signin_script.js"></script>
 </body>
 </html>
